methods.flowerpot.FlowerPot.scala.error
Erreur de compilation :
FlowerPot:11: error: '=' expected but 'for' found.
def avance(n:Int) for (i <- 1 to n) avance ;
                  ^FlowerPot:11: error: illegal start of simple expression
def avance(n:Int) for (i <- 1 to n) avance ;
                                           ^